# raspa3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  bump_version.py  pyproject.toml
.github/workflows/: github-actions-create-release.yml  github-actions-publish-pypi.yml
app/: CMakeLists.txt  main.cpp
benchmarks/raspakit-benchmarks/: CMakeLists.txt
data/: CMakeLists.txt
examples/: CMakeLists.txt  run.cmake.in
examples/python/: api.py  script.py
manual/: raspa-manual.tex
manual/commands/: commands.tex
manual/introduction/: introduction.tex
packaging/: CMakeLists.txt  PKGBUILD
raspa/: CMakeLists.txt  __init__.py  atom.py  base.py  component.py  forcefield.py  framework.py  intputreader.py  mc.py  mcmoveprobabilities.py  pybindings.cpp  simulationbox.py  system.py  utils.py
raspa3/: CMakeLists.txt
src/foundationkit/: hdf5.ixx  stringutils.ixx
src/mathkit/: double4.ixx
src/raspakit/: atom.ixx  breakthrough.cpp  cif_reader.cpp  component.cpp  component.ixx  (+21 more)
tests/: CMakeLists.txt
tests/raspakit-tests/: CMakeLists.txt  cbmc_interactions.cpp  dudlambda.cpp  electrostatic_field.cpp  electrostatic_polarization.cpp  electrostatic_potential.cpp  energy_decomposition.cpp  ewald.cpp  gradients.cpp  insertion_deletion.cpp  mc.cpp  nist_water_1.cpp  nist_water_2.cpp  nist_water_3.cpp  nist_water_4.cpp  pressure.cpp  rigid_gradient.cpp  spacegroup.cpp  static_energy.cpp
workshop/: CMakeLists.txt  run.cmake.in
workshop/day1/exercise_1_methane_in_a_box/: force_field.json  simulation.json
workshop/day1/exercise_2_investigate_structures/: ITQ-29.cif
workshop/day1/exercise_3_co2_in_itq-29/: ITQ-29.cif  run  simulation.json
workshop/day1/exercise_4_co2_energy_histogram_zeolites/: plot_itq-29  plot_itq-29.bat  plot_mfi  plot_mfi.bat
workshop/day1/exercise_4_co2_energy_histogram_zeolites/300K/itq-29/: simulation.json
workshop/day1/exercise_4_co2_energy_histogram_zeolites/300K/mfi/: simulation.json
workshop/day1/exercise_4_co2_energy_histogram_zeolites/600K/itq-29/: simulation.json
workshop/day1/exercise_4_co2_energy_histogram_zeolites/600K/mfi/: simulation.json
workshop/day1/exercise_4_co2_energy_histogram_zeolites/data/: plot_itq-29  plot_mfi
workshop/day1/exercise_4_co2_energy_histogram_zeolites/data/itq-29/300K/: energy_histogram.s0.txt
workshop/day1/exercise_4_co2_energy_histogram_zeolites/data/itq-29/600K/: energy_histogram.s0.data
workshop/day1/exercise_4_co2_energy_histogram_zeolites/data/mfi/300K/: energy_histogram.s0.txt
workshop/day1/exercise_4_co2_energy_histogram_zeolites/data/mfi/600K/: energy_histogram.s0.txt
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/300K/itq-29/: simulation.json
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/300K/mfi/: run  simulation.json
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/600K/itq-29/: simulation.json
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/600K/mfi/: simulation.json
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/data/itq-29/300K/: grid_ITQ-29_component_CO2.s0.cube.bz2  grid_component_CO2.s0.cube.bz2
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/data/itq-29/600K/: grid_ITQ-29_component_CO2.s0.cube.bz2  grid_component_CO2.s0.cube.bz2
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/data/mfi/300K/: grid_MFI_SI_component_CO2.s0.cube.bz2  grid_component_CO2.s0.cube.bz2
workshop/day1/exercise_5_co2_in_itq-29_energy_histogram/data/mfi/600K/: grid_MFI_SI_component_CO2.s0.cube.bz2  grid_component_CO2.s0.cube.bz2
workshop/day2/: exercise_2_md_fluid_self_diffusion
workshop/day2/exercise_1_rdf/: plot_rdf
workshop/day2/exercise_1_rdf/100mol_uc/: plot_rdf  simulation.json
workshop/day2/exercise_1_rdf/100mol_uc/conventional_rdf/: rdf_CH4_CH4.s0.data
workshop/day2/exercise_1_rdf/100mol_uc/msd/: msd_methane.s0.data
workshop/day2/exercise_1_rdf/100mol_uc/output/: output_300_0.s0.data
workshop/day2/exercise_1_rdf/200mol_uc/: methane.json  plot_rdf  run  simulation.json
workshop/day2/exercise_1_rdf/400mol_uc/: plot_rdf  simulation.json
workshop/day2/exercise_1_rdf/data/100mol_uc/conventional_rdf/: rdf_CH4_CH4.s0.txt
workshop/day2/exercise_1_rdf/data/100mol_uc/msd/: msd_onsager_methane_methane.s0.txt  msd_self_methane.s0.txt
workshop/day2/exercise_1_rdf/data/200mol_uc/conventional_rdf/: rdf_CH4_CH4.s0.data
workshop/day2/exercise_1_rdf/data/200mol_uc/msd/: msd_onsager_methane_methane.s0.txt  msd_self_methane.s0.data
workshop/day2/exercise_1_rdf/data/400mol_uc/conventional_rdf/: rdf_CH4_CH4.s0.txt
workshop/day2/exercise_1_rdf/data/400mol_uc/msd/: msd_onsager_methane_methane.s0.data  msd_self_methane.s0.txt
workshop/day2/exercise_3_md_diffusion_methane_in_mfi/: plot_log_log_x  plot_log_log_y  plot_log_log_z  plot_x  plot_y  plot_z  simulation.json
workshop/day2/exercise_3_md_diffusion_methane_in_mfi/data/msd/: msd_onsager_methane_methane.s0.data  msd_self_methane.s0.txt
workshop/day2/exercise_4_md_diffusion_methane_in_itq-29/: plot  plot_log_log_y  plot_log_log_z  plot_x  plot_xyz  simulation.json
workshop/day2/exercise_4_md_diffusion_methane_in_itq-29/msd/: msd_onsager_methane_methane.s0.data  msd_self_methane.s0.txt
workshop/day3/exercise_1_gibbs_co2/: simulation.json
workshop/day3/exercise_2_helium_void_fraction_itq-29/: default.profraw  force_field.json  helium.json  simulation.json
workshop/day3/exercise_2_helium_void_fraction_itq-29/output/: output_300_0.s0.data  output_300_0.s0.json
workshop/day3/exercise_3_adsorption_co2_in_itq-29/: simulation.json
workshop/day3/exercise_3_adsorption_co2_in_itq-29/data/: 300K.tgz  600K.tgz  data_CO2_300.data  data_CO2_600.data
workshop/day3/exercise_4_cfcmc_adsorption_co2_in_itq-29/: simulation.json
workshop/day3/exercise_4_cfcmc_adsorption_co2_in_itq-29/data/: cbmc-cfcmc-300K.tgz  cbmc-cfcmc-600K.tgz  cfcmc-300K.tgz  cfcmc-600K.tgz  data_cbmc_cfcmc_300K.data  data_cbmc_cfcmc_600K.txt  data_cfcmc_CO2_300K.data  data_cfcmc_CO2_600K.txt
workshop/day3/exercise_5_chemical_potentials_mfi/: CO2.json  MFI_SI.cif  simulation.json
(+110 files in other folders)
