[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "raspa3"
version = "3.0.0"

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.build-type = "Release"
cmake.args = [
    "--preset=macos-apple-silicon",
    "-DBUILD_TESTING=0",
    "-DBUILD_PYTHON=1",
]
wheel.cmake = true
build-dir = "build/python"
sdist.exclude = ["*.cpp", "*.ixx", "*.pcm", "CMakeLists.txt"]
